# deploykit-backend

./: .gitignore  Cargo.toml  README.md  build.rs  deploykit-backend.service  deploykit-dbus.conf  deploykit-dbus.conf.debug  deploykit-dbus.xml
cli/: Cargo.toml
cli/src/: main.rs
data/quirks/asus-xc-kx700m-d4/: quirk.bash  quirk.toml
data/quirks/ho-z6000g/: quirk.bash  quirk.toml
data/quirks/huawei-qingyun-w510/: grub.bash  quirk.bash  quirk.toml
data/quirks/unis-l3891-g2/: quirk.bash  quirk.toml
disk/: Cargo.toml
disk/src/: devices.rs  lib.rs  partition.rs
examples/: cli.rs  part.rs  part_gpt.rs  part_mbr.rs
install/: Cargo.toml
install/src/: chroot.rs  download.rs  dracut.rs  error.rs  extract.rs  genfstab.rs  grub.rs  hostname.rs  lib.rs  locale.rs  mount.rs  ssh.rs  swap.rs  user.rs  utils.rs  zoneinfo.rs
partition/: Cargo.toml
quirk/: Cargo.toml
quirk/examples/: quirk-test-full.rs  test_dmi_is_match.rs
quirk/src/: lib.rs
quirks/ho-z6000g/: grub.bash
src/: error.rs  handler.rs  main.rs  server.rs  take_wake_lock.rs
