[package]
name = "deploykit-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
zbus = { version = "3.14", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tempfile = "3.9"

disk = { path = "./disk" }
install = { path = "./install" }

[workspace]
members = ["cli", "disk", "install"]

[patch.crates-io]
loopdev = { git = "https://github.com/eatradish/loopdev", rev = "0dde43a15320cf84148e57fed8aec6683755c04f" }
