[package]
name = "deploykit-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
zbus = { version = "4.0", features = ["tokio"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tempfile = "3.9"
ctrlc = "3.4"
sysinfo = "0.30"
rustix = { version = "0.38", features = ["process"] }

disk = { path = "./disk" }
install = { path = "./install" }

[workspace]
members = ["disk", "install"]

[patch.crates-io]
loopdev = { git = "https://github.com/eatradish/loopdev", rev = "0dde43a15320cf84148e57fed8aec6683755c04f" }

[dev-dependencies]
clap = { version =  "4.4", features = ["derive"] }

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
