[package]
name = "deploykit-backend"
version = "0.7.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
eyre = "0.6.12"
zbus = { version = "5.1", features = ["tokio"] }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = "3.13.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
sysinfo = "0.33.0"
rustix = { version = "0.38.37", features = ["process"] }
logind-zbus = "5.1"
tracing-appender = "0.2.3"

disk = { path = "./disk" }
install = { path = "./install" }

[workspace]
members = ["disk", "install"]

[patch.crates-io]
loopdev = { git = "https://github.com/eatradish/loopdev", rev = "0dde43a15320cf84148e57fed8aec6683755c04f" }

[dev-dependencies]
clap = { version =  "4.5.20", features = ["derive"] }

[build-dependencies]
vergen-gix = "1.0.2"
vergen = "9.0.1"

[features]
default = []
is_retro = ["install/is_retro"]
