[package]
name = "disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libparted = "0.1"
libparted-sys = "0.3"
tracing = "0.1"
fancy-regex = "0.14"
thiserror = "2.0"
disk-types = "0.1"
serde = { version = "1.0", features = ["derive"] }
gptman = { git = "https://github.com/eatradish/gptman", rev = "0b4122594ab48a49533571383a95af44aa9b6c03" }
mbrman = "0.5"
rand = "0.8"
uuid = { version = "1.7", features = ["macro-diagnostics"] }
rustix = { version = "0.38", features = ["process", "fs", "mount"] }
snafu = "0.8"
