[package]
name = "install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
sysinfo = "0.30"
unsquashfs-wrapper = "0.2"
rustix = { version = "0.38", features = ["process", "fs", "mount"] }
tracing = "0.1"
disk = { path = "../disk" }
libc = "0.2"
reqwest = "0.12"
tokio = { version = "1.35", features = ["rt-multi-thread", "fs"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
serde_json = "1.0.111"
fstab = "0.4.0"
