[package]
name = "install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30"
unsquashfs-wrapper = "0.2"
rustix = { version = "0.38", features = ["process", "fs", "mount", "system"] }
tracing = "0.1"
disk = { path = "../disk" }
libc = "0.2"
fstab-generate = "0.1"
reqwest = "0.12"
tokio = { version = "1.35", features = ["rt-multi-thread", "fs"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
hex = "0.4"
serde_json = "1.0.111"
num_enum = "0.7.2"
snafu = "0.8.2"
linux-raw-sys = "0.6.4"
